--- a/project/3-pilot-survey.qmd
+++ b/project/3-pilot-survey.qmd
@@ -28,7 +28,7 @@ maxPoints <- rubric %>%
 
 As a team, create a **pilot survey** - an initial draft of your final survey for preliminary testing. Your fellow classmates will all take your survey and provide feedback. The course instructor will also review and grade your survey and will provide written feedback. Follow the instructions below to prepare your pilot survey.
 
-## 1. Get Organized
+# 1. Get Organized
 
 Download and unzip [this template](../templates/pilot-survey.zip) for your pilot survey. The folder contains the following files:
 
@@ -40,7 +40,7 @@ Download and unzip [this template](../templates/pilot-survey.zip) for your pilot
 - `p3-other.qmd`: The code for creating part 3 of your survey, which should include any other questions (e.g. demographics) you wish to ask your survey respondents.
 - `images`: A folder of images (if you're using any in your survey). This is just to make sure we have a copy. In general though your images should all be accessible from the internet (e.g. github.com, uploaded to a formr run, etc.).
 
-## 2. Write your survey content
+# 2. Write your survey content
 
 The files included in the zip file are just example content based on the [blog post](https://www.jhelvy.com/posts/2021-09-18-choice-based-conjoint-surveys-in-r-with-formr/) on building conjoint surveys in R. **This is just placeholder content - you need to replace it with your survey content**.
 
@@ -52,7 +52,7 @@ Follow these guidelines in inserting your content:
 
 > Be sure to render each file often - you should render each part to html files so you can preview that everything is displaying as expected.
 
-## 3. Upload your content to formr.org
+# 3. Upload your content to formr.org
 
 Using the class formr account:
 
@@ -60,7 +60,13 @@ Using the class formr account:
 2. Upload each sheet as a separate Survey in formr, then create a Run linking the surveys together. Be sure to carefully edit the Run settings such that respondents are appropriately screened out as desired.
 3. When you are confident that the Run is ready, turn the "volume" settings to the third setting ("People who have the link can access").
 
-# 4. Submit
+# 4. Attribution
+
+Include a short description of the specific contributions of each team member for this report. If all members contributed equally, you can just put the single sentence "All members contributed equally".
+
+Team members who do not make meaningful contributions to their projects will not receive the same grade as that of their team mates. If you are having any issues or disputes among team members, please contact Professor Helveston ASAP so we can find a resolution.
+
+# 5. Submit
 
 Render your `.qmd` files for each part of your survey, then create a zip file of all the files in your R project folder for this assignment and submit it on the corresponding assignment submission on Blackboard. **Only one person from your team should submit the report.**
 
