--- a/project/5-final-survey.qmd
+++ b/project/5-final-survey.qmd
@@ -1,14 +1,87 @@
 ---
 title: "Final Survey"
 toc: true
-toc-location: right
-execute:
-  echo: false
-  warning: false
-  message: false
+toc-title: Table of contents
+toc-location: left
 params:
   number: 5
   weight: '5%'
 ---
 
-Coming soon!
+```{r}
+#| label: setup
+
+source(here::here("_common.R"))
+
+rubric <- read_csv(here::here('rubrics', '5-final-survey.csv'))
+maxPoints <- rubric %>%
+    filter(rating == "Excellent") %>%
+    summarise(max = sum(maxPoints)) %>%
+    pull(max)
+```
+
+```{r child = here::here("fragments", "project.qmd")}
+```
+
+As a team, create your **final survey** by building on your initial pilot survey. You should incorporate any changes you wrote about in your pilot analysis report. The course instructor will review and grade your survey and will provide written feedback. Follow the instructions below to prepare your pilot survey.
+
+# 1. Get Organized
+
+Download and unzip [this template](../templates/final-survey.zip) for your survey. The folder contains the following files:
+
+- `final_survey.Rproj`: An R Project file for staying organized.
+- `p1-intro.qmd`: The code for creating part 1 of your survey, which should include a welcome page, content form, and eligibility questions for screening our ineligible respondents.
+- `p2-choice-questions.qmd`: The code for creating part 2 of your survey, which should include your education content and randomized conjoint choice questions.
+- `p3-other.qmd`: The code for creating part 3 of your survey, which should include any other questions (e.g. demographics) you wish to ask your survey respondents.
+- `make_choice_questions.R`: The code to generate the `choice_questions.csv` file.
+- `choice_questions.csv`: The survey choice question design file.
+- `images`: A folder of images you're using in your survey.
+
+# 2. Write your survey content
+
+The files included in the zip file are taken directly from the example [apples conjoint repo](https://github.com/jhelvy/formr4conjoint) on GitHub associated with the [blog post](https://www.jhelvy.com/posts/2021-09-18-choice-based-conjoint-surveys-in-r-with-formr/) on building conjoint surveys in R. **This is just placeholder content - you need to replace it with your survey content**.
+
+Follow these guidelines in inserting your content:
+
+- You may directly copy and paste any content you wish from your [Survey Plan](https://madd.seas.gwu.edu/2023-Fall/project/2-survey-plan.html) and  [Pilot Survey](https://madd.seas.gwu.edu/2023-Fall/project/3-pilot-survey.html) assignments.
+- In your `p2-choice-questions.qmd` file, you should include at least one example choice question (e.g. the first choice question for the first respondent) using your choice question design file (the `choice_questions.csv` file).
+- Your code should **not** reference any local files - all files should be hosted online somewhere (e.g. uploaded to a formr run, github.com, etc.), and your code should use the urls to those locations. This includes your `choice_questions.csv` file as well as any images used in your survey.
+
+> Be sure to knit each file often - you should knit each part to html files so you can preview that everything is displaying as expected.
+
+# 3. Upload your content to formr.org
+
+Using your team google and formr accounts:
+
+1. Create a new Google Sheet for each of your survey .qmd files. You may directly copy and edit from your pilot survey sheets.
+2. Upload each sheet as a separate Survey in formr, then create a Run linking the surveys together. Be sure to carefully edit the Run settings such that respondents are appropriately screened out as desired.
+3. When you are confident that the Run is ready, turn the "volume" settings to the third setting ("People who have the link can access").
+4. Send the link to Professor Helveston in a message on slack (only one team member).
+
+# 4. Attribution
+
+Include a short description in your blackboard submission of the specific contributions of each team member for this report. If all members contributed equally, you can just put the single sentence "All members contributed equally".
+
+Team members who do not make meaningful contributions to their projects will not receive the same grade as that of their team mates. If you are having any issues or disputes among team members, please contact Professor Helveston ASAP so we can find a resolution.
+
+# 5. Submit
+
+Render your `.qmd` files for each part of your survey, then create a zip file of all the files in your R project folder for this assignment and submit it on the corresponding assignment submission on Blackboard. **Only one person from your team should submit the report.**
+
+# Grading Rubric
+
+**`r maxPoints` Total Points**
+
+```{r, echo=FALSE}
+rubric %>%
+  mutate(description = paste0("<b>", points, '</b><br>', description)) %>%
+  select(-points) %>%
+  spread(key = rating, value = description) %>%
+  select(-category) %>%
+  rename(Category = label) %>%
+  arrange(order) %>%
+  select(-order) %>%
+  select(-maxPoints) %>%
+  kable(format = 'html', escape = FALSE) %>%
+  kable_styling(bootstrap_options = "striped")
+```
