--- a/project/5-final-survey.qmd
+++ b/project/5-final-survey.qmd
@@ -1,10 +1,13 @@
 ---
 title: "Final Survey"
 toc: true
-toc-title: Table of contents
-toc-location: left
+toc-location: right
+execute:
+  echo: false
+  warning: false
+  message: false
 params:
-  number: 5
+  number: 4
   weight: '5%'
 ---
 
