--- a/project/5-final-survey.qmd
+++ b/project/5-final-survey.qmd
@@ -56,8 +56,8 @@ Follow these guidelines in inserting your content:
 
 Using your team google and formr accounts:
 
-1. Create a new Google Sheet for each of your survey .qmd files. You may directly copy and edit from your pilot survey sheets.
-2. Upload each sheet as a separate Survey in formr, then create a Run linking the surveys together. Be sure to carefully edit the Run settings such that respondents are appropriately screened out as desired.
+1. Create new Google sheets that are based on your pilot survey. You absolutely can (and should) start from the content in your pilot survey and make adjustments based on feedback you have received.
+2. Upload each sheet as a separate Survey in formr, then create a Run linking the surveys together. Be sure to carefully edit the Run settings such that respondents are appropriately screened out as desired. You can export your pilot survey Run settings as a json file and then upload that as a new Run if you wish, just be sure to use the new surveys you just created.
 3. When you are confident that the Run is ready, turn the "volume" settings to the third setting ("People who have the link can access").
 4. Send the link to Professor Helveston in a message on slack (only one team member).
 
