--- a/hw/11-exam.qmd
+++ b/hw/11-exam.qmd
@@ -6,4 +6,4 @@ params:
 
 This week's assignment will be a take-home. The exam will be posted in your class Box folder. Additional instructions will be posted in the course Slack.
 
-The exam will be posted on 11/30 and due 12/3 by 11:59pm sharp.
+The exam will be distributed in class on 11/29 and due 12/3 by 11:59pm sharp (no late submissions will be accepted).
