--- a/class/13-class-review.qmd
+++ b/class/13-class-review.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Exam Review & Final Analysis Overview"
+title: "Class Review"
 toc: false
 execute:
   echo: false
@@ -11,4 +11,5 @@ params:
   formr4conjoint: FALSE
 ---
 
-Coming soon!
+```{r child = here::here("fragments", "class.qmd")}
+```
