--- a/hw/11-exam.qmd
+++ b/hw/11-exam.qmd
@@ -7,3 +7,7 @@ params:
 This week's assignment will be a take-home. The exam will be posted in your class Box folder. Additional instructions will be posted in the course Slack.
 
 The exam will be distributed in class on 11/29 and due 12/3 by 11:59pm sharp (no late submissions will be accepted).
+
+In addition, next week we'll talk about story-telling. Watch this video on how to start a speech:
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/w82a1FT5o88" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
