--- a/hw/11-exam.qmd
+++ b/hw/11-exam.qmd
@@ -4,9 +4,7 @@ params:
   number: 11
 ---
 
-This week's assignment will be a take-home. The exam will be posted in your class Box folder. Additional instructions will be posted in the course Slack.
-
-The exam will be distributed in class on 11/29 and due 12/3 by 11:59pm sharp (no late submissions will be accepted).
+This week's assignment will be a take-home. The exam will be distributed in class on 11/29 and due 12/3 by 11:59pm sharp (no late submissions will be accepted). Use the template posted in the `#class` channel on slack to complete the exam. While you are free to use any other tools you wish (e.g. course content, ChatGPT, etc.), **you must work alone** on the exam.
 
 In addition, next week we'll talk about story-telling. Watch this video on how to start a speech:
 
